Updated reader, add capability to write object back to binary